# rest-API

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
books/admin/: __init__.py  books.py
books/api/: urls.py
books/api/serializers/: __init__.py  books.py
books/api/views/: __init__.py  books.py
books/models/: books.py
books/tests/: test_books.py
doc/: create_db.sql
kernel/: settings.py  urls.py
user/management/commands/: create_superuser.py
